// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_having.sql > line 6 1`] = `
[
  "CREATE TABLE test_having (a int, b int, c char(8), d char)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "test_having",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c",
                  "is_local": true,
                  "location": 40,
                  "typeName": {
                    "location": 42,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bpchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 8,
                          },
                          "location": 47,
                        },
                      },
                    ],
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "d",
                  "is_local": true,
                  "location": 51,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bpchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": -1,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 18 1`] = `
[
  "SELECT b, c FROM test_having
	GROUP BY b, c HAVING count(*) = 1 ORDER BY b, c",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "b",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                  ],
                  "location": 42,
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
                "location": 60,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 62,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 73,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 76,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 22 1`] = `
[
  "SELECT b, c FROM test_having
	GROUP BY b, c HAVING b = 3 ORDER BY b, c",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "b",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                  ],
                  "location": 42,
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
                "location": 53,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 3,
                    },
                    "location": 55,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 66,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 69,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 25 1`] = `
[
  "SELECT lower(c), count(c) FROM test_having
	GROUP BY lower(c) HAVING count(*) > 2 OR min(a) = max(a)
	ORDER BY lower(c)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 31,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "FuncCall": {
                  "args": [
                    {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "c",
                            },
                          },
                        ],
                        "location": 59,
                      },
                    },
                  ],
                  "funcformat": "COERCE_EXPLICIT_CALL",
                  "funcname": [
                    {
                      "String": {
                        "sval": "lower",
                      },
                    },
                  ],
                  "location": 53,
                },
              },
            ],
            "havingClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 69,
                        },
                      },
                      "location": 78,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 80,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "a",
                                    },
                                  },
                                ],
                                "location": 89,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "min",
                              },
                            },
                          ],
                          "location": 85,
                        },
                      },
                      "location": 92,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "a",
                                    },
                                  },
                                ],
                                "location": 98,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "max",
                              },
                            },
                          ],
                          "location": 94,
                        },
                      },
                    },
                  },
                ],
                "boolop": "OR_EXPR",
                "location": 82,
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "c",
                                },
                              },
                            ],
                            "location": 117,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "lower",
                          },
                        },
                      ],
                      "location": 111,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "c",
                                },
                              },
                            ],
                            "location": 13,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "lower",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "c",
                                },
                              },
                            ],
                            "location": 23,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 29 1`] = `
[
  "SELECT c, max(a) FROM test_having
	GROUP BY c HAVING count(*) > 2 OR min(a) = max(a)
	ORDER BY c",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 22,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
            ],
            "havingClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "agg_star": true,
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "count",
                              },
                            },
                          ],
                          "location": 53,
                        },
                      },
                      "location": 62,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 64,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "a",
                                    },
                                  },
                                ],
                                "location": 73,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "min",
                              },
                            },
                          ],
                          "location": 69,
                        },
                      },
                      "location": 76,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "a",
                                    },
                                  },
                                ],
                                "location": 82,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "max",
                              },
                            },
                          ],
                          "location": 78,
                        },
                      },
                    },
                  },
                ],
                "boolop": "OR_EXPR",
                "location": 66,
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 95,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "a",
                                },
                              },
                            ],
                            "location": 14,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "max",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 40 1`] = `
[
  "SELECT a FROM test_having HAVING min(a) < max(a)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 37,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "min",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 40,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 46,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 44 1`] = `
[
  "SELECT 1 AS one FROM test_having HAVING 1 > 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 40,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 44,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "one",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 48 1`] = `
[
  "SELECT 1 AS one FROM test_having WHERE 1/a = 1 HAVING 1 < 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "test_having",
                  "relpersistence": "p",
                },
              },
            ],
            "havingClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 54,
                  },
                },
                "location": 56,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 58,
                  },
                },
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "one",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 39,
                      },
                    },
                    "location": 40,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "location": 41,
                      },
                    },
                  },
                },
                "location": 43,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 45,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_having.sql > line 50 1`] = `
[
  "DROP TABLE test_having",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "test_having",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
